# ffmpeg

./: .gitignore  README.md  build.gradle  settings.gradle
lib/: build-cmake.gradle  build.gradle
lib/src/: CMakeLists.txt  native-lib.cpp
lib/src/fftools/: cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
lib/src/libavcodec/: mathops.h
lib/src/libavcodec/arm/: mathops.h
lib/src/libavcodec/avr32/: mathops.h
lib/src/libavcodec/mips/: mathops.h
lib/src/libavcodec/ppc/: mathops.h
lib/src/libavcodec/x86/: mathops.h
lib/src/libavformat/: os_support.h
lib/src/libavutil/: internal.h  libm.h  thread.h  timer.h
lib/src/libavutil/x86/: asm.h  emms.h
src/main/java/com/media/utils/ffmpeg/: FFmpeg.java
src/test/java/com/media/utils/ffmpeg/: FFmpegTest.java
